cmake_minimum_required(VERSION 3.5)
project(beginner_tutorials)

# Default to C99
if(NOT CMAKE_C_STANDARD)
  set(CMAKE_C_STANDARD 99)
endif()

# Default to C++17
if(NOT CMAKE_CXX_STANDARD)
  set(CMAKE_CXX_STANDARD 17)
endif()

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(std_msgs REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(tf2 REQUIRED)
find_package(tf2_ros REQUIRED)
find_package(rosidl_default_generators REQUIRED)

ament_export_dependencies(rosidl_default_generators)
find_package(rosidl_default_generators REQUIRED)
rosidl_generate_interfaces(${PROJECT_NAME}
  "srv/InputStr.srv"
  DEPENDENCIES std_msgs
 )
add_executable(talker src/pub.cpp)
ament_target_dependencies(talker rclcpp std_msgs geometry_msgs tf2 tf2_ros)

add_executable(listener src/sub.cpp)
ament_target_dependencies(listener rclcpp std_msgs)

add_executable(client src/Service.cpp)
ament_target_dependencies(client rclcpp std_msgs)
rosidl_target_interfaces(talker 
                        ${PROJECT_NAME} "rosidl_typesupport_cpp")
rosidl_target_interfaces(client
                        ${PROJECT_NAME} "rosidl_typesupport_cpp")
if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  find_package(ament_cmake_gtest REQUIRED)
  set(ament_cmake_copyright_FOUND TRUE)

  set(ament_cmake_cpplint_FOUND TRUE)
  set(ament_cmake_cppcheck_FOUND TRUE)
  set(ament_cmake_flake8_FOUND TRUE)
  set(ament_cmake_uncrustify_FOUND TRUE)
  ament_add_gtest(${PROJECT_NAME}_test test/test.cpp)
  ament_target_dependencies(${PROJECT_NAME}_test rclcpp std_msgs)
  rosidl_target_interfaces(${PROJECT_NAME}_test 
                          ${PROJECT_NAME} "rosidl_typesupport_cpp")
  ament_lint_auto_find_test_dependencies()
endif()
install(TARGETS
  talker
  listener
  client
  ${PROJECT_NAME}_test
  DESTINATION lib/${PROJECT_NAME})

install(
  DIRECTORY launch
  DESTINATION share/${PROJECT_NAME})

ament_package()
